--- a/Home/home.html
+++ b/Home/home.html
@@ -10,14 +10,14 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="logo">QuizChamp</div>
+        <h1>QuizChamp <span class="fire">🔥</span></h1>
         <nav class="nav-menu">
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
             </button>
             <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Wallet</a></li>
+                <li><a href="/wallets/wallet.html">Wallet</a></li>
                 <li><a href="my-challenges.html">My Challenges</a></li>
                 <li><a href="#">Profile</a></li>
             </ul>
