--- a/Home/quiz/quiz.html
+++ b/Home/quiz/quiz.html
@@ -6,7 +6,270 @@
     <title>Quiz - QuizArena</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="quiz.css">
+    <style>
+        /* Quiz Container Styles */
+        .quiz-container {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Quiz Header */
+        .quiz-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+            padding-bottom: 1rem;
+            border-bottom: 2px solid #eee;
+        }
+
+        .quiz-title {
+            font-size: 1.5rem;
+            color: #333;
+            margin: 0;
+        }
+
+        .quiz-info {
+            display: flex;
+            gap: 1.5rem;
+            align-items: center;
+        }
+
+        /* Timer Styles */
+        .timer {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            font-size: 1.2rem;
+            color: #666;
+        }
+
+        .timer.warning {
+            color: #f59e0b;
+        }
+
+        .timer.danger {
+            color: #ef4444;
+            animation: pulse 1s infinite;
+        }
+
+        @keyframes pulse {
+            0% { opacity: 1; }
+            50% { opacity: 0.5; }
+            100% { opacity: 1; }
+        }
+
+        /* Progress Bar */
+        .progress {
+            font-size: 1.1rem;
+            color: #666;
+        }
+
+        /* Question Container */
+        .question-container {
+            margin-bottom: 2rem;
+        }
+
+        .question-text {
+            font-size: 1.3rem;
+            color: #333;
+            margin-bottom: 1.5rem;
+        }
+
+        /* Options Container */
+        .options-container {
+            display: grid;
+            gap: 1rem;
+            margin-bottom: 2rem;
+        }
+
+        .option-button {
+            padding: 1rem;
+            border: 2px solid #e5e7eb;
+            border-radius: 8px;
+            background: white;
+            text-align: left;
+            font-size: 1.1rem;
+            color: #333;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .option-button:hover {
+            border-color: #3b82f6;
+            background: #f0f7ff;
+        }
+
+        .option-button.selected {
+            border-color: #3b82f6;
+            background: #f0f7ff;
+        }
+
+        .option-button.correct {
+            border-color: #10b981;
+            background: #ecfdf5;
+        }
+
+        .option-button.wrong {
+            border-color: #ef4444;
+            background: #fef2f2;
+        }
+
+        /* Navigation Buttons */
+        .quiz-navigation {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 2rem;
+        }
+
+        .nav-btn {
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 6px;
+            background: #3b82f6;
+            color: white;
+            font-size: 1rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: all 0.2s;
+        }
+
+        .nav-btn:hover {
+            background: #2563eb;
+        }
+
+        .nav-btn:disabled {
+            background: #e5e7eb;
+            cursor: not-allowed;
+        }
+
+        /* Submit Button */
+        .submit-btn {
+            width: 100%;
+            padding: 1rem;
+            border: none;
+            border-radius: 6px;
+            background: #10b981;
+            color: white;
+            font-size: 1.1rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .submit-btn:hover {
+            background: #059669;
+        }
+
+        .submit-btn:disabled {
+            background: #e5e7eb;
+            cursor: not-allowed;
+        }
+
+        /* Loading State */
+        .loading-spinner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            padding: 2rem;
+            color: #666;
+        }
+
+        .loading-spinner.hidden {
+            display: none;
+        }
+
+        /* Feedback Message */
+        .feedback-message {
+            text-align: center;
+            padding: 1rem;
+            margin: 1rem 0;
+            border-radius: 6px;
+            font-size: 1.2rem;
+            display: none;
+        }
+
+        .feedback-message.correct {
+            background: #ecfdf5;
+            color: #059669;
+            display: block;
+        }
+
+        .feedback-message.wrong {
+            background: #fef2f2;
+            color: #ef4444;
+            display: block;
+        }
+
+        /* Results Page */
+        .results-container {
+            text-align: center;
+            padding: 2rem;
+        }
+
+        .results-container h2 {
+            font-size: 2rem;
+            color: #333;
+            margin-bottom: 1.5rem;
+        }
+
+        .results-stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .stat-card {
+            padding: 1.5rem;
+            background: #f8fafc;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+
+        .stat-card h3 {
+            font-size: 1.1rem;
+            color: #666;
+            margin-bottom: 0.5rem;
+        }
+
+        .stat-card p {
+            font-size: 2rem;
+            color: #333;
+            margin: 0;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .quiz-container {
+                margin: 1rem;
+                padding: 1rem;
+            }
+
+            .quiz-header {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .quiz-info {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .option-button {
+                padding: 0.75rem;
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -19,7 +282,7 @@
         </div>
         <div class="nav-links">
             <a href="../home.html" class="nav-link">Home</a>
-            <a href="../my-challenges.html" class="nav-link">My Challenges</a>
+            <a href="../my-contests.html" class="nav-link">My Contests</a>
             <a href="../leaderboard.html" class="nav-link">Leaderboard</a>
             <a href="../profile.html" class="nav-link">Profile</a>
         </div>
@@ -34,12 +297,18 @@
                 <div class="quiz-info">
                     <div class="timer">
                         <i class="fas fa-clock"></i>
-                        <span id="time-remaining">00:00</span>
+                        <span id="time-remaining">30</span>
                     </div>
                     <div class="progress">
                         <span id="current-question">0</span>/<span id="total-questions">0</span>
                     </div>
                 </div>
+            </div>
+
+            <!-- Loading Spinner -->
+            <div id="loading-spinner" class="loading-spinner">
+                <i class="fas fa-spinner fa-spin fa-2x"></i>
+                <p>Loading quiz...</p>
             </div>
 
             <!-- Quiz Content -->
@@ -50,6 +319,9 @@
                         <!-- Options will be dynamically added here -->
                     </div>
                 </div>
+
+                <!-- Feedback Message -->
+                <div id="feedback-message" class="feedback-message"></div>
 
                 <!-- Navigation Buttons -->
                 <div class="quiz-navigation">
@@ -72,15 +344,31 @@
             </div>
         </div>
 
-        <!-- Access Denied Message (Hidden by default) -->
-        <div class="access-denied hidden">
-            <i class="fas fa-lock"></i>
-            <h2>Access Denied</h2>
-            <p>Please join the challenge first to attempt the quiz.</p>
-            <a href="../home.html" class="continue-btn">
-                Browse Challenges
-                <i class="fas fa-arrow-right"></i>
-            </a>
+        <!-- Results Container (Hidden by default) -->
+        <div id="results-container" class="results-container" style="display: none;">
+            <h2>Quiz Results</h2>
+            <div class="results-stats">
+                <div class="stat-card">
+                    <h3>Total Score</h3>
+                    <p id="total-score">0</p>
+                </div>
+                <div class="stat-card">
+                    <h3>Correct Answers</h3>
+                    <p id="correct-answers">0</p>
+                </div>
+                <div class="stat-card">
+                    <h3>Wrong Answers</h3>
+                    <p id="wrong-answers">0</p>
+                </div>
+                <div class="stat-card">
+                    <h3>Time Taken</h3>
+                    <p id="time-taken">0s</p>
+                </div>
+            </div>
+            <button id="back-to-contests" class="nav-btn">
+                <i class="fas fa-arrow-left"></i>
+                Back to Contests
+            </button>
         </div>
     </main>
 
