--- a/admin/login.html
+++ b/admin/login.html
@@ -90,8 +90,8 @@
     <div class="login-container">
         <div class="login-card">
             <div class="login-header">
-                <img src="../assets/logo.png" alt="QuizArena Logo">
-                <h1>Admin Login</h1>
+                <h1>QuizChamp <span class="fire">🔥</span></h1>
+                <h2>Admin Login</h2>
                 <p>Sign in with your admin account to continue</p>
             </div>
             <button id="googleSignIn" class="google-btn">
