--- a/admin/pages/challenges.html
+++ b/admin/pages/challenges.html
@@ -283,8 +283,7 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-header">
-            <img src="../../assets/logo.png" alt="QuizArena Logo">
-            <h1>QuizArena</h1>
+            <h1>QuizChamp <span class="fire">🔥</span></h1>
         </div>
         <ul class="nav-links">
             <li class="nav-item" onclick="window.location.href='../index.html'">
