--- a/admin/pages/users.html
+++ b/admin/pages/users.html
@@ -85,8 +85,7 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-header">
-            <img src="../../assets/logo.png" alt="QuizArena Logo">
-            <h1>QuizArena</h1>
+            <h1>QuizChamp <span class="fire">🔥</span></h1>
         </div>
         <ul class="nav-links">
             <li class="nav-item" onclick="window.location.href='../index.html'">
@@ -101,7 +100,7 @@
                 <i class="fas fa-trophy"></i>
                 Challenges
             </li>
-            <li class="nav-item" onclick="window.location.href='questions.html'">
+            <li class="nav-item" onclick="window.location.href='quizzes.html'">
                 <i class="fas fa-question-circle"></i>
                 Questions
             </li>
