--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="header-buttons">
+                    <a href="wallet.html" class="btn">Wallet</a>
                     <a href="auth/login.html" class="btn btn-primary">Get Started</a>
                 </div>
             </nav>
@@ -123,16 +124,9 @@
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Newsletter</h3>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Enter your email">
-                        <button type="submit" class="btn btn-primary">Subscribe</button>
-                    </form>
-                </div>
             </div>
             <div class="footer-bottom">
-                <p class="copyright">© 2024 QuizChamp. All rights reserved.</p>
+                <p class="copyright">© 2025 QuizChamp. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -154,16 +148,7 @@
     </div>
 
     <!-- Wallet Modal -->
-    <div id="walletModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Your Wallet</h2>
-            <div class="wallet-balance">
-                <i class="fas fa-wallet"></i>
-                <span>₹250</span>
-            </div>
-        </div>
-    </div>
+    
 
     <script src="script.js"></script>
 </body>
