--- a/wallets/wallet.html
+++ b/wallets/wallet.html
@@ -145,7 +145,7 @@
             <ul class="nav-links">
                 <li><a href="/home/home.html" class="active">Home</a></li>
                 <li><a href="wallets/wallet.html">Wallet</a></li>
-                <li><a href="my-challenges.html">My Challenges</a></li>
+                <li><a href="/Home/my-challenges.html">My Challenges</a></li>
                 <li><a href="#">Profile</a></li>
             </ul>
         </nav>
