--- a/Home/quiz/quiz.html
+++ b/Home/quiz/quiz.html
@@ -211,39 +211,125 @@
         /* Results Page */
         .results-container {
             text-align: center;
-            padding: 2rem;
+            padding: 3rem;
+            max-width: 800px;
+            margin: 2rem auto;
+            background: white;
+            border-radius: 16px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .results-container h2 {
-            font-size: 2rem;
-            color: #333;
-            margin-bottom: 1.5rem;
+            font-size: 2.5rem;
+            color: #1a1a1a;
+            margin-bottom: 2rem;
+            font-weight: 700;
         }
 
         .results-stats {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1.5rem;
-            margin-bottom: 2rem;
+            gap: 2rem;
+            margin-bottom: 3rem;
+            padding: 2rem;
+            background: #f8fafc;
+            border-radius: 12px;
         }
 
         .stat-card {
             padding: 1.5rem;
-            background: #f8fafc;
-            border-radius: 8px;
+            background: white;
+            border-radius: 12px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            transition: transform 0.2s ease;
+        }
+
+        .stat-card:hover {
+            transform: translateY(-5px);
         }
 
         .stat-card h3 {
-            font-size: 1.1rem;
-            color: #666;
-            margin-bottom: 0.5rem;
+            font-size: 1.2rem;
+            color: #4b5563;
+            margin-bottom: 0.75rem;
+            font-weight: 600;
         }
 
         .stat-card p {
-            font-size: 2rem;
-            color: #333;
+            font-size: 2.5rem;
+            color: #1a1a1a;
             margin: 0;
+            font-weight: 700;
+        }
+
+        /* Winner Announcement Styles */
+        .winner-announcement {
+            margin: 3rem 0;
+            padding: 2rem;
+            border-radius: 16px;
+            background: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .winner-announcement h3 {
+            font-size: 2rem;
+            color: #1a1a1a;
+            margin-bottom: 1.5rem;
+            font-weight: 700;
+        }
+
+        .winner-announcement .bg-green-100 {
+            background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);
+            padding: 2rem;
+            border-radius: 12px;
+            border: 2px solid #10b981;
+        }
+
+        .winner-announcement .bg-yellow-100 {
+            background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%);
+            padding: 2rem;
+            border-radius: 12px;
+            border: 2px solid #f59e0b;
+        }
+
+        .winner-announcement i {
+            font-size: 2rem;
+            margin-right: 1rem;
+            vertical-align: middle;
+        }
+
+        .winner-announcement p {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin: 0;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        .winner-announcement .bg-green-100 p {
+            color: #065f46;
+        }
+
+        .winner-announcement .bg-yellow-100 p {
+            color: #92400e;
+        }
+
+        #back-to-contests {
+            margin-top: 2rem;
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
+            font-weight: 600;
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
+            color: white;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        #back-to-contests:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         /* Responsive Design */
@@ -269,6 +355,16 @@
                 font-size: 1rem;
             }
         }
+
+        /* Added style for Result button */
+        .continue-btn.result-btn {
+            background-color: #10b981; /* Green background */
+            border: none;
+        }
+
+        .continue-btn.result-btn:hover {
+            background-color: #059669; /* Darker green on hover */
+        }
     </style>
 </head>
 <body>
@@ -290,6 +386,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
+        <!-- Quiz Container -->
         <div class="quiz-container">
             <!-- Quiz Header -->
             <div class="quiz-header">
@@ -344,32 +441,7 @@
             </div>
         </div>
 
-        <!-- Results Container (Hidden by default) -->
-        <div id="results-container" class="results-container" style="display: none;">
-            <h2>Quiz Results</h2>
-            <div class="results-stats">
-                <div class="stat-card">
-                    <h3>Total Score</h3>
-                    <p id="total-score">0</p>
-                </div>
-                <div class="stat-card">
-                    <h3>Correct Answers</h3>
-                    <p id="correct-answers">0</p>
-                </div>
-                <div class="stat-card">
-                    <h3>Wrong Answers</h3>
-                    <p id="wrong-answers">0</p>
-                </div>
-                <div class="stat-card">
-                    <h3>Time Taken</h3>
-                    <p id="time-taken">0s</p>
-                </div>
-            </div>
-            <button id="back-to-contests" class="nav-btn">
-                <i class="fas fa-arrow-left"></i>
-                Back to Contests
-            </button>
-        </div>
+        <!-- Results Container (Will be dynamically added) -->
     </main>
 
     <!-- Scripts -->
