--- a/admin/pages/users.html
+++ b/admin/pages/users.html
@@ -8,62 +8,169 @@
     <link rel="stylesheet" href="../style.css">
     <style>
         .search-container {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
+            position: relative;
         }
 
         .search-input {
             width: 100%;
-            max-width: 400px;
-            padding: 0.75rem 1rem;
+            max-width: 500px;
+            padding: 1rem 1.5rem;
+            padding-left: 3rem;
             background-color: var(--bg-tertiary);
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
+            border: 2px solid var(--border-color);
+            border-radius: 12px;
             color: var(--text-primary);
-            transition: var(--transition);
+            transition: all 0.3s ease;
+            font-size: 1rem;
         }
 
         .search-input:focus {
             outline: none;
             border-color: var(--primary-color);
-            box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+            box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.15);
+            background-color: var(--bg-secondary);
+        }
+
+        .search-icon {
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: var(--text-secondary);
+            font-size: 1.2rem;
+        }
+
+        .table-container {
+            background: var(--bg-secondary);
+            border-radius: 16px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            margin-top: 1rem;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: separate;
+            border-spacing: 0;
+        }
+
+        th {
+            background-color: var(--bg-tertiary);
+            padding: 1.2rem 1.5rem;
+            text-align: left;
+            font-weight: 600;
+            color: var(--text-primary);
+            border-bottom: 2px solid var(--border-color);
+            position: sticky;
+            top: 0;
+            z-index: 10;
+        }
+
+        td {
+            padding: 1.2rem 1.5rem;
+            border-bottom: 1px solid var(--border-color);
+            color: var(--text-primary);
+            transition: background-color 0.2s ease;
+        }
+
+        tr:hover td {
+            background-color: var(--bg-tertiary);
+        }
+
+        .user-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: var(--primary-color);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 600;
+            margin-right: 1rem;
+        }
+
+        .user-info {
+            display: flex;
+            align-items: center;
+        }
+
+        .user-name {
+            font-weight: 600;
+            color: var(--text-primary);
+        }
+
+        .user-email {
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+            margin-top: 0.2rem;
+        }
+
+        .wallet-balance {
+            font-weight: 600;
+            color: var(--success-color);
+        }
+
+        .challenges-count {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 0.4rem 0.8rem;
+            border-radius: 20px;
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
+        .action-btn {
+            padding: 0.6rem 1rem;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            font-weight: 500;
+            transition: all 0.2s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .view-btn {
+            background-color: var(--primary-color);
+            color: white;
+        }
+
+        .view-btn:hover {
+            background-color: var(--primary-color-dark);
+            transform: translateY(-2px);
         }
 
         .challenge-history {
-            max-height: 300px;
+            max-height: 400px;
             overflow-y: auto;
-        }
-
-        .challenge-history::-webkit-scrollbar {
-            width: 6px;
-        }
-
-        .challenge-history::-webkit-scrollbar-track {
-            background: var(--bg-tertiary);
-        }
-
-        .challenge-history::-webkit-scrollbar-thumb {
-            background: var(--primary-color);
-            border-radius: 3px;
-        }
-
-        .challenge-history::-webkit-scrollbar-thumb:hover {
-            background: var(--primary-color-dark);
+            padding: 1rem;
         }
 
         .challenge-row {
-            padding: 0.75rem;
-            border-bottom: 1px solid var(--border-color);
+            background: var(--bg-secondary);
+            padding: 1rem;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            border: 1px solid var(--border-color);
+            transition: all 0.2s ease;
         }
 
-        .challenge-row:last-child {
-            border-bottom: none;
+        .challenge-row:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         .challenge-status {
-            padding: 0.25rem 0.75rem;
-            border-radius: 9999px;
-            font-size: 0.75rem;
-            font-weight: 500;
+            padding: 0.4rem 1rem;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .challenge-status.completed {
@@ -79,6 +186,66 @@
         .challenge-status.cancelled {
             background-color: var(--danger-color);
             color: white;
+        }
+
+        .modal-content {
+            background: var(--bg-primary);
+            border-radius: 20px;
+            max-width: 800px;
+            width: 90%;
+        }
+
+        .modal-header {
+            padding: 1.5rem;
+            border-bottom: 2px solid var(--border-color);
+        }
+
+        .modal-header h2 {
+            font-size: 1.5rem;
+            color: var(--text-primary);
+        }
+
+        .close-btn {
+            background: none;
+            border: none;
+            color: var(--text-secondary);
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: color 0.2s ease;
+        }
+
+        .close-btn:hover {
+            color: var(--danger-color);
+        }
+
+        /* Loading Animation */
+        .loading-spinner {
+            display: none;
+            width: 40px;
+            height: 40px;
+            border: 4px solid var(--bg-tertiary);
+            border-top: 4px solid var(--primary-color);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 2rem auto;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Empty State */
+        .empty-state {
+            text-align: center;
+            padding: 3rem;
+            color: var(--text-secondary);
+        }
+
+        .empty-state i {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: var(--text-tertiary);
         }
     </style>
 </head>
@@ -115,6 +282,7 @@
 
     <div class="main-content">
         <div class="search-container">
+            <i class="fas fa-search search-icon"></i>
             <input type="text" class="search-input" id="search-input" placeholder="Search users by name or email...">
         </div>
 
@@ -122,10 +290,9 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Email</th>
+                        <th>User</th>
                         <th>Wallet Balance</th>
-                        <th>Challenges Joined</th>
+                        <th>Challenges</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -133,6 +300,12 @@
                     <!-- Users will be populated here -->
                 </tbody>
             </table>
+            <div class="loading-spinner" id="loading-spinner"></div>
+            <div class="empty-state" id="empty-state" style="display: none;">
+                <i class="fas fa-users"></i>
+                <h3>No Users Found</h3>
+                <p>Try adjusting your search criteria</p>
+            </div>
         </div>
     </div>
 
