--- a/Home/home.html
+++ b/Home/home.html
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Error State -->
-~        <div class="error-state hidden">
+        <div class="error-state hidden">
             <i class="fas fa-exclamation-circle"></i>
             <p>Failed to load contests. Please try again later.</p>
             <button class="retry-btn">Retry</button>
